testData/fixtures/classes/magicMethods/magic-methods-missing-underscore.php
<?php

class MissingUnderscore
{
    public function <error descr="[EA] '_construct' is not a magic method. Did you mean '__construct'?">_construct</error>(){}
    public function <error descr="[EA] '_destruct' is not a magic method. Did you mean '__destruct'?">_destruct</error>() {}
    public function <error descr="[EA] '_call' is not a magic method. Did you mean '__call'?">_call</error>() {}
    public function <error descr="[EA] '_callStatic' is not a magic method. Did you mean '__callStatic'?">_callStatic</error>() {}
    public function <error descr="[EA] '_get' is not a magic method. Did you mean '__get'?">_get</error>() {}
    public function <error descr="[EA] '_set' is not a magic method. Did you mean '__set'?">_set</error>() {}
    public function <error descr="[EA] '_isset' is not a magic method. Did you mean '__isset'?">_isset</error>() {}
    public function <error descr="[EA] '_unset' is not a magic method. Did you mean '__unset'?">_unset</error>() {}
    public function <error descr="[EA] '_sleep' is not a magic method. Did you mean '__sleep'?">_sleep</error>() {}
    public function <error descr="[EA] '_wakeup' is not a magic method. Did you mean '__wakeup'?">_wakeup</error>() {}
    public function <error descr="[EA] '_toString' is not a magic method. Did you mean '__toString'?">_toString</error>() {}
    public function <error descr="[EA] '_invoke' is not a magic method. Did you mean '__invoke'?">_invoke</error>() {}
    public function <error descr="[EA] '_debugInfo' is not a magic method. Did you mean '__debugInfo'?">_debugInfo</error>() {}
    public function <error descr="[EA] '_set_state' is not a magic method. Did you mean '__set_state'?">_set_state</error>() {}
    public function <error descr="[EA] '_clone' is not a magic method. Did you mean '__clone'?">_clone</error>() {}

}